--- a/widgets/default/style.css
+++ b/widgets/default/style.css
@@ -83,6 +83,8 @@ html, body {
     border-radius: 4px;
     background: #FFFFFF;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    white-space: normal;
+    word-break: break-word;
 }
 
 #main-container > .message-item > .message > img {
@@ -126,6 +128,8 @@ html, body {
     border-radius: 4px;
     padding: 8px;
     text-align: center;
+    white-space: normal;
+    word-break: break-word;
 }
 
 #main-container > .donate-item > .message-wrapper > .message > img {
@@ -169,6 +173,8 @@ html, body {
     border-radius: 4px;
     padding: 8px;
     text-align: center;
+    white-space: normal;
+    word-break: break-word;
 }
 
 #main-container > .sponsor-item > .message-wrapper > .message:empty {
@@ -218,6 +224,8 @@ html, body {
 
 #main-container > .spogift-item > .message > span {
     z-index: 1;
+    white-space: normal;
+    word-break: break-word;
 }
 
 #main-container > .spogift-item > .message > span > span {
@@ -243,6 +251,8 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    white-space: normal;
+    word-break: break-word;
 }
 
 #main-container > .raid-item > .message > img {
